[project]
name = "online-dev-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ko", email = "ko@to.me" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
online-dev-environment = { path = ".", editable = true }

[dependency-groups]
dev = [
    "online-dev-environment",
    "pytest>=8.4.2",
]
